--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 .ipynb_checkpoints/
 Face-Mask-Detection/.ipynb_checkpoints/
 Face-Mask-Detection/dataset/
+Face-Mask-Detection/data/faces/aakarsh-verma.jpg
 data/faces/aakarsh-verma.jpg
