--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-.vscode/
 .ipynb_checkpoints/
-Face-Mask-Detection/.ipynb_checkpoints/
-Face-Mask-Detection/dataset/
-Face-Mask-Detection/data/faces/aakarsh-verma.jpg
-data/faces/aakarsh-verma.jpg
+env/
+.vscode/
+plot.png
+dataset/with_mask/
+dataset/without_mask/
+dataset/faces/aakarsh-verma.jpg
+dataset/faces/.ipynb_checkpoints/
+try.ipynb
+try - Copy.ipynb
